--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,22 +162,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['LotFrontage', 'MasVnrArea', 'GarageYrBlt']"
+       "['Alley',\n",
+       " 'MasVnrType',\n",
+       " 'BsmtQual',\n",
+       " 'BsmtCond',\n",
+       " 'BsmtExposure',\n",
+       " 'BsmtFinType1',\n",
+       " 'BsmtFinType2',\n",
+       " 'Electrical',\n",
+       " 'FireplaceQu',\n",
+       " 'GarageType',\n",
+       " 'GarageFinish',\n",
+       " 'GarageQual',\n",
+       " 'GarageCond',\n",
+       " 'PoolQC',\n",
+       " 'Fence',\n",
+       " 'MiscFeature']"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "atributos_numericos_com_valores_numericos_nulos = obter_colunas_com_nulos(df_train[atributos_numericos])\n",
+    "atributos_numericos_com_valores_numericos_nulos = obter_colunas_com_nulos(df_train[todos_atributos_categoricos])\n",
     "atributos_numericos_com_valores_numericos_nulos"
    ]
   },
@@ -190,19 +205,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LotFrontage    17.74\n",
-       "MasVnrArea      0.55\n",
-       "GarageYrBlt     5.55\n",
+       "Alley           93.77\n",
+       "MasVnrType      59.73\n",
+       "BsmtQual         2.53\n",
+       "BsmtCond         2.53\n",
+       "BsmtExposure     2.60\n",
+       "BsmtFinType1     2.53\n",
+       "BsmtFinType2     2.60\n",
+       "Electrical       0.07\n",
+       "FireplaceQu     47.26\n",
+       "GarageType       5.55\n",
+       "GarageFinish     5.55\n",
+       "GarageQual       5.55\n",
+       "GarageCond       5.55\n",
+       "PoolQC          99.52\n",
+       "Fence           80.75\n",
+       "MiscFeature     96.30\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +263,7 @@
        "Name: SalePrice, dtype: float64"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +302,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +323,7 @@
        "<Axes: xlabel='OverallQual', ylabel='SalePrice'>"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -336,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -362,21 +390,21 @@
        "np.float64(59803.628225198845)"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lr = linear_model.LinearRegression()\n",
-    "lr.fit(X_train, y_train)\n",
-    "y_predict = lr.predict(X_valid)\n",
+    "reg_linear = linear_model.LinearRegression()\n",
+    "reg_linear.fit(X_train, y_train)\n",
+    "y_predict = reg_linear.predict(X_valid)\n",
     "root_mean_squared_error(y_valid, y_predict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -385,75 +413,67 @@
        "np.float64(54620.612522997806)"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dtr = tree.DecisionTreeRegressor()\n",
-    "dtr.fit(X_train, y_train)\n",
-    "y_predict = dtr.predict(X_valid)\n",
+    "decision_tree_reg = tree.DecisionTreeRegressor()\n",
+    "decision_tree_reg.fit(X_train, y_train)\n",
+    "y_predict = decision_tree_reg.predict(X_valid)\n",
     "root_mean_squared_error(y_valid, y_predict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(54399.82809705906)"
+       "np.float64(54872.607222309656)"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rfr = ensemble.RandomForestRegressor()\n",
-    "rfr.fit(X_train, y_train)\n",
-    "y_predict = rfr.predict(X_valid)\n",
+    "random_forest_reg = ensemble.RandomForestRegressor()\n",
+    "random_forest_reg.fit(X_train, y_train)\n",
+    "y_predict = random_forest_reg.predict(X_valid)\n",
     "root_mean_squared_error(y_valid, y_predict)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 174,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "rfr.fit(train_set[['OverallQual']], train_set['SalePrice'])\n",
-    "y_predict = rfr.predict(X_test[['OverallQual']])"
+    "### Gerando o submit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "\"['SalePrice'] not in index\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[176], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m test_set[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSalesPrice\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m y_predict\n\u001b[0;32m----> 2\u001b[0m df_submit \u001b[38;5;241m=\u001b[39m \u001b[43mtest_set\u001b[49m\u001b[43m[\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mId\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mSalePrice\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m      3\u001b[0m df\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msumit.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[0;32m~/ciencia_de_dados/house_prices/.venv/lib/python3.12/site-packages/pandas/core/frame.py:4108\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   4106\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m is_iterator(key):\n\u001b[1;32m   4107\u001b[0m         key \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(key)\n\u001b[0;32m-> 4108\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_get_indexer_strict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcolumns\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m[\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m   4110\u001b[0m \u001b[38;5;66;03m# take() does not accept boolean indexers\u001b[39;00m\n\u001b[1;32m   4111\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(indexer, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdtype\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mbool\u001b[39m:\n",
-      "File \u001b[0;32m~/ciencia_de_dados/house_prices/.venv/lib/python3.12/site-packages/pandas/core/indexes/base.py:6200\u001b[0m, in \u001b[0;36mIndex._get_indexer_strict\u001b[0;34m(self, key, axis_name)\u001b[0m\n\u001b[1;32m   6197\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   6198\u001b[0m     keyarr, indexer, new_indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reindex_non_unique(keyarr)\n\u001b[0;32m-> 6200\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_raise_if_missing\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkeyarr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindexer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis_name\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   6202\u001b[0m keyarr \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtake(indexer)\n\u001b[1;32m   6203\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, Index):\n\u001b[1;32m   6204\u001b[0m     \u001b[38;5;66;03m# GH 42790 - Preserve name from an Index\u001b[39;00m\n",
-      "File \u001b[0;32m~/ciencia_de_dados/house_prices/.venv/lib/python3.12/site-packages/pandas/core/indexes/base.py:6252\u001b[0m, in \u001b[0;36mIndex._raise_if_missing\u001b[0;34m(self, key, indexer, axis_name)\u001b[0m\n\u001b[1;32m   6249\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNone of [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m] are in the [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00maxis_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m]\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m   6251\u001b[0m not_found \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(ensure_index(key)[missing_mask\u001b[38;5;241m.\u001b[39mnonzero()[\u001b[38;5;241m0\u001b[39m]]\u001b[38;5;241m.\u001b[39munique())\n\u001b[0;32m-> 6252\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnot_found\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m not in index\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mKeyError\u001b[0m: \"['SalePrice'] not in index\""
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "test_set['SalesPrice'] = y_predict\n",
+    "decision_tree_reg.fit(train_set[['OverallQual']], train_set['SalePrice'])\n",
+    "y_predict = decision_tree_reg.predict(test_set[['OverallQual']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_set['SalePrice'] = y_predict\n",
     "df_submit = test_set[['Id', 'SalePrice']]\n",
-    "df.to_csv(\"sumit.csv\")"
+    "df.to_csv(\"sumit.csv\", index=False)"
    ]
   }
  ],
