Ajustando a exportação do csv.

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -467,13 +467,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "test_set['SalePrice'] = y_predict\n",
     "df_submit = test_set[['Id', 'SalePrice']]\n",
-    "df.to_csv(\"sumit.csv\", index=False)"
+    "df_submit.to_csv(\"sumit.csv\", index=False)"
    ]
   }
  ],
