Adição de validação cruzada, refactoring do código para correção de bugs e incremento da legibilidade.

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -22,7 +22,11 @@
     "from sklearn import ensemble\n",
     "from sklearn import tree\n",
     "from sklearn.model_selection import StratifiedShuffleSplit\n",
-    "from sklearn.metrics import root_mean_squared_error"
+    "\n",
+    "from sklearn.metrics import root_mean_squared_error\n",
+    "from sklearn.metrics import make_scorer, mean_squared_error\n",
+    "\n",
+    "from sklearn.model_selection import  cross_val_score"
    ]
   },
   {
@@ -76,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def obter_conj_treinamento_e_teste_estratificado(df: pd.DataFrame, categoria:str):\n",
+    "def obter_conj_treinamento_e_teste_estratificado_por(categoria:str, df: pd.DataFrame):\n",
     "    \n",
     "    strat_train_set = None\n",
     "    strat_valid_set = None\n",
@@ -363,12 +367,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### OBTENDO CONJUNTOS DE TREINAMENTO, VALIDAÇÃO E TESTES"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_set, valid_set = obter_conj_treinamento_e_teste_estratificado(df, 'OverallQual')\n",
+    "train_set, valid_set = obter_conj_treinamento_e_teste_estratificado_por('OverallQual', get_dataframe(path=PATH_TRAIN), )\n",
     "\n",
     "X_train = train_set[['OverallQual']]\n",
     "y_train = train_set['SalePrice']\n",
@@ -380,72 +391,118 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### AVALIAÇÃO DOS MODELOS EM VALIDAÇÃO CRUZADA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Criando função para exibir as estatísticas."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.float64(59803.628225198845)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "reg_linear = linear_model.LinearRegression()\n",
-    "reg_linear.fit(X_train, y_train)\n",
-    "y_predict = reg_linear.predict(X_valid)\n",
-    "root_mean_squared_error(y_valid, y_predict)"
+    "def display(scores, estimator):\n",
+    "    print(f\"Estimator: {type(estimator).__name__}\\t Mean: {scores.mean()}\\t Standard deviation: {scores.std()}\")\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.float64(54620.612522997806)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "decision_tree_reg = tree.DecisionTreeRegressor()\n",
-    "decision_tree_reg.fit(X_train, y_train)\n",
-    "y_predict = decision_tree_reg.predict(X_valid)\n",
-    "root_mean_squared_error(y_valid, y_predict)"
+    "def validar_modelos(estimators: list):\n",
+    "    \n",
+    "    melhor_score = 0\n",
+    "    nome_estimator = ''\n",
+    "\n",
+    "    for estimator in estimators:\n",
+    "        scores = cross_val_score(estimator=estimator, X=X_train, y=y_train, scoring=rmse_scorer, cv=5)\n",
+    "        display(scores, estimator)\n",
+    "\n",
+    "        if melhor_score == 0:\n",
+    "            melhor_score = scores.mean()\n",
+    "            nome_estimator = type(estimator).__name__\n",
+    "        else:\n",
+    "            melhor_score = scores.mean() if scores.mean() < melhor_score else melhor_score\n",
+    "            nome_estimator = type(estimator).__name__\n",
+    "\n",
+    "\n",
+    "    print(f\"\\nModelo Campeão: {nome_estimator} \\tScore: \\t{melhor_score}\" )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como eu quero fazer validação cruzada de diversos modelos, criei um array de estimators"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "estimators = [\n",
+    "    linear_model.LinearRegression(),\n",
+    "    tree.DecisionTreeRegressor(), \n",
+    "    ensemble.RandomForestRegressor()\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para utilizar o root_mean_squared_error na validação cruzada é necessário criar um score personalizado. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rmse_scorer = make_scorer(root_mean_squared_error)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "np.float64(54872.607222309656)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estimator: LinearRegression\t Mean: 45461.736277219024\t Standard deviation: 4037.7543385452677\n",
+      "Estimator: DecisionTreeRegressor\t Mean: 42897.742643223224\t Standard deviation: 3959.7737683227674\n",
+      "Estimator: RandomForestRegressor\t Mean: 42946.786609945804\t Standard deviation: 4017.498088598416\n",
+      "\n",
+      "Modelo Campeão: RandomForestRegressor \tScore: \t42897.742643223224\n"
+     ]
     }
    ],
    "source": [
-    "random_forest_reg = ensemble.RandomForestRegressor()\n",
-    "random_forest_reg.fit(X_train, y_train)\n",
-    "y_predict = random_forest_reg.predict(X_valid)\n",
-    "root_mean_squared_error(y_valid, y_predict)"
+    "validar_modelos(estimators=estimators)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Avaliando modelos em loop"
    ]
   },
   {
@@ -456,18 +513,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "decision_tree_reg.fit(train_set[['OverallQual']], train_set['SalePrice'])\n",
-    "y_predict = decision_tree_reg.predict(test_set[['OverallQual']])"
+    "Fazendo a previsão"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random_forest_reg = ensemble.RandomForestRegressor()\n",
+    "random_forest_reg.fit(train_set[['OverallQual']], train_set['SalePrice'])\n",
+    "y_predict = random_forest_reg.predict(test_set[['OverallQual']])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Gerando o arquivo de submit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
