pipelines, preprocessors e validação cruzada para um único estimator.

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
     "from sklearn.model_selection import StratifiedShuffleSplit\n",
     "\n",
     "from sklearn.metrics import root_mean_squared_error\n",
-    "from sklearn.metrics import make_scorer, mean_squared_error\n",
+    "from sklearn.metrics import make_scorer\n",
     "\n",
     "from sklearn.model_selection import  cross_val_score"
    ]
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,11 +76,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def obter_conj_treinamento_e_teste_estratificado_por(categoria:str, df: pd.DataFrame, cols: list):\n",
+    "def obter_conj_treinamento_e_teste_estratificado_por(categoria:str, df: pd.DataFrame):\n",
     "    \n",
     "    strat_train_set = None\n",
     "    strat_valid_set = None\n",
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        " 'MiscFeature']"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
        "Name: SalePrice, dtype: float64"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
        "<Axes: xlabel='OverallQual', ylabel='SalePrice'>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
        "SalePrice       0.790982   0.708624   1.000000"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
        "<Axes: xlabel='SalePrice', ylabel='GrLivArea'>"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
        "<Axes: xlabel='OverallQual', ylabel='GrLivArea'>"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -529,23 +529,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_columns = [\n",
     "    'OverallQual', \n",
     "    'GrLivArea'\n",
+    "]\n",
+    "\n",
+    "dummy_columns_pipeline = [\n",
+    "    'OverallQual'\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_set, valid_set = obter_conj_treinamento_e_teste_estratificado_por('OverallQual', get_dataframe(path=PATH_TRAIN), X_columns)\n",
+    "train_set, valid_set = obter_conj_treinamento_e_teste_estratificado_por('OverallQual', get_dataframe(path=PATH_TRAIN))\n",
     "\n",
     "X_train = train_set[X_columns]\n",
     "y_train = train_set['SalePrice']\n",
@@ -572,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,8 +648,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Validando os modelos"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -653,8 +664,8 @@
      "output_type": "stream",
      "text": [
       "Estimator: LinearRegression\t Mean: 39987.779398266845\t Standard deviation: 4616.19438717808\n",
-      "Estimator: DecisionTreeRegressor\t Mean: 47698.07130925118\t Standard deviation: 3105.119229015535\n",
-      "Estimator: RandomForestRegressor\t Mean: 40955.26779104876\t Standard deviation: 2816.6762368387285\n",
+      "Estimator: DecisionTreeRegressor\t Mean: 48059.839481087154\t Standard deviation: 3738.1155352493274\n",
+      "Estimator: RandomForestRegressor\t Mean: 41030.67683346737\t Standard deviation: 3008.3293402761683\n",
       "\n",
       "Modelo Campeão: RandomForestRegressor \tScore: \t39987.779398266845\n"
      ]
@@ -668,7 +679,88 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Avaliando modelos em loop"
+    "### PIPELINES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "from sklearn.model_selection import train_test_split, KFold\n",
+    "from sklearn.metrics import mean_squared_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pipeline para campos que não serão objeto de processamento\n",
+    "pipeline_dummy = Pipeline([\n",
+    "    ('dummy', SimpleImputer(strategy='median'))\n",
+    "])\n",
+    "\n",
+    "\n",
+    "pipeline_GrLIveArea = Pipeline([\n",
+    "    ('MinMaxScaler', MinMaxScaler())\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        ('dummy preprocessor', pipeline_dummy, ['OverallQual']),\n",
+    "        ('GrLIveArea', pipeline_GrLIveArea, ['GrLivArea'])\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline = Pipeline(\n",
+    "    steps=[\n",
+    "        ('preprocessor', preprocessor),\n",
+    "        ('Regressão Linear', linear_model.LinearRegression())\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score: 40579.0797\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Validação cruzada\n",
+    "kf = KFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "cv_scores = cross_val_score(pipeline, X_train, y_train, cv=kf, scoring=rmse_scorer)\n",
+    "\n",
+    "print(f'Score: {np.mean(cv_scores):.4f}')"
    ]
   },
   {
@@ -687,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
