(0.22094) Pipelines, Transformers e validação cruzada.

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,66 +561,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### AVALIAÇÃO DOS MODELOS EM VALIDAÇÃO CRUZADA"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Criando função para exibir as estatísticas."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def display(scores, estimator):\n",
-    "    print(f\"Estimator: {type(estimator).__name__}\\t Mean: {scores.mean()}\\t Standard deviation: {scores.std()}\")\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def validar_modelos(estimators: list):\n",
-    "    \n",
-    "    melhor_score = 0\n",
-    "    nome_estimator = ''\n",
-    "\n",
-    "    for estimator in estimators:\n",
-    "        scores = cross_val_score(estimator=estimator, X=X_train, y=y_train, scoring=rmse_scorer, cv=5)\n",
-    "        display(scores, estimator)\n",
-    "\n",
-    "        if melhor_score == 0:\n",
-    "            melhor_score = scores.mean()\n",
-    "            nome_estimator = type(estimator).__name__\n",
-    "        else:\n",
-    "            melhor_score = scores.mean() if scores.mean() < melhor_score else melhor_score\n",
-    "            nome_estimator = type(estimator).__name__\n",
-    "\n",
-    "\n",
-    "    print(f\"\\nModelo Campeão: {nome_estimator} \\tScore: \\t{melhor_score}\" )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Como eu quero fazer validação cruzada de diversos modelos, criei um array de estimators"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,28 +593,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Validando os modelos"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Estimator: LinearRegression\t Mean: 39987.779398266845\t Standard deviation: 4616.19438717808\n",
-      "Estimator: DecisionTreeRegressor\t Mean: 48059.839481087154\t Standard deviation: 3738.1155352493274\n",
-      "Estimator: RandomForestRegressor\t Mean: 41030.67683346737\t Standard deviation: 3008.3293402761683\n",
-      "\n",
-      "Modelo Campeão: RandomForestRegressor \tScore: \t39987.779398266845\n"
-     ]
-    }
-   ],
-   "source": [
-    "validar_modelos(estimators=estimators)"
+    "### AVALIAÇÃO DOS MODELOS EM VALIDAÇÃO CRUZADA"
    ]
   },
   {
@@ -684,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,13 +614,24 @@
     "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.base import BaseEstimator, TransformerMixin\n",
-    "from sklearn.model_selection import train_test_split, KFold\n",
-    "from sklearn.metrics import mean_squared_error"
+    "from sklearn.model_selection import train_test_split, KFold"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def display_stats(d: dict):\n",
+    "    dataframe = pd.DataFrame.from_dict(d)\n",
+    "    dataframe.sort_values(by=['score', 'std'], ascending=True, inplace=True)\n",
+    "    print(dataframe)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,37 +662,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pipeline = Pipeline(\n",
-    "    steps=[\n",
-    "        ('preprocessor', preprocessor),\n",
-    "        ('Regressão Linear', linear_model.LinearRegression())\n",
-    "    ]\n",
-    ")"
+    "def avaliar_modelos(preprocessor_param: ColumnTransformer, estimators_param: list = estimators):\n",
+    "    \n",
+    "    d = {}\n",
+    "    score_estimator = []\n",
+    "    std_estimator = []\n",
+    "    name_estimator = []\n",
+    "\n",
+    "    for estimator_loop in estimators_param:\n",
+    "    \n",
+    "        pipeline = Pipeline(\n",
+    "            steps=[\n",
+    "                ('preprocessor', preprocessor_param),\n",
+    "                (f'{type(estimator_loop).__name__}', estimator_loop)\n",
+    "            ]\n",
+    "        )\n",
+    "\n",
+    "        scores = cross_val_score(pipeline, X_train, y_train, scoring=rmse_scorer, cv=10)\n",
+    "        \n",
+    "        score_estimator.append(scores.mean())\n",
+    "        std_estimator.append(scores.std())\n",
+    "        name_estimator.append(type(estimator_loop).__name__)\n",
+    "    \n",
+    "    \n",
+    "    d['estimator'] = name_estimator\n",
+    "    d['score'] = score_estimator\n",
+    "    d['std'] = std_estimator\n",
+    "    \n",
+    "    display_stats(d)\n",
+    "    \n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score: 40579.0797\n"
+      "               estimator         score          std\n",
+      "0       LinearRegression  39986.131374  6026.126054\n",
+      "2  RandomForestRegressor  40657.452694  5359.271001\n",
+      "1  DecisionTreeRegressor  47246.239821  6608.201607\n"
      ]
     }
    ],
    "source": [
-    "# Validação cruzada\n",
-    "kf = KFold(n_splits=5, shuffle=True, random_state=42)\n",
-    "cv_scores = cross_val_score(pipeline, X_train, y_train, cv=kf, scoring=rmse_scorer)\n",
-    "\n",
-    "print(f'Score: {np.mean(cv_scores):.4f}')"
+    "avaliar_modelos(preprocessor_param=preprocessor, estimators_param=estimators)"
    ]
   },
   {
@@ -779,13 +734,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "random_forest_reg = ensemble.RandomForestRegressor()\n",
-    "random_forest_reg.fit(train_set[['OverallQual']], train_set['SalePrice'])\n",
-    "y_predict = random_forest_reg.predict(test_set[['OverallQual']])"
+    "X = train_set[X_columns]\n",
+    "y = train_set['SalePrice']\n",
+    "\n",
+    "pipline = Pipeline(\n",
+    "    steps=[\n",
+    "        ('preprocessor', preprocessor),\n",
+    "        ('estimator', ensemble.RandomForestRegressor())\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "\n",
+    "pipline.fit(X=X, y=y)\n",
+    "y_predict = pipline.predict(test_set[X_columns])"
    ]
   },
   {
@@ -797,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
