--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        " 'MiscFeature']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
        "Name: SalePrice, dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
        "<Axes: xlabel='OverallQual', ylabel='SalePrice'>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
        "SalePrice       0.790982   0.708624   1.000000"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
        "<Axes: xlabel='SalePrice', ylabel='GrLivArea'>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
        "<Axes: xlabel='OverallQual', ylabel='GrLivArea'>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +545,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression, Ridge, Lasso, ElasticNet, BayesianRidge, HuberRegressor, PassiveAggressiveRegressor, SGDRegressor, TheilSenRegressor, RANSACRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor, AdaBoostRegressor, ExtraTreesRegressor\n",
+    "from sklearn.svm import SVR\n",
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from lightgbm import LGBMRegressor\n",
+    "from xgboost import XGBRegressor\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "\n",
+    "estimators = [\n",
+    "    LinearRegression(),\n",
+    "    Ridge(alpha=0.5),\n",
+    "    Lasso(alpha=0.1),\n",
+    "    ElasticNet(alpha=0.1, l1_ratio=0.5),\n",
+    "    BayesianRidge(),\n",
+    "    DecisionTreeRegressor(),\n",
+    "    RandomForestRegressor(),\n",
+    "    ExtraTreesRegressor(),\n",
+    "    GradientBoostingRegressor(),\n",
+    "    AdaBoostRegressor(),\n",
+    "    SVR(),\n",
+    "    KNeighborsRegressor(),\n",
+    "    HuberRegressor(),\n",
+    "    PassiveAggressiveRegressor(max_iter=1000, tol=1e-3),\n",
+    "    SGDRegressor(max_iter=1000, tol=1e-3),\n",
+    "    TheilSenRegressor(),\n",
+    "    RANSACRegressor(),\n",
+    "    LGBMRegressor(verbose=-1),\n",
+    "    XGBRegressor()\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,19 +598,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "estimators = [\n",
-    "    linear_model.LinearRegression(),\n",
-    "    tree.DecisionTreeRegressor(), \n",
-    "    ensemble.RandomForestRegressor()\n",
-    "]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -582,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,17 +724,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "               estimator         score          std\n",
-      "0       LinearRegression  39986.131374  6026.126054\n",
-      "2  RandomForestRegressor  40657.452694  5359.271001\n",
-      "1  DecisionTreeRegressor  47246.239821  6608.201607\n"
+      "                     estimator         score          std\n",
+      "17               LGBMRegressor  37035.479979  4447.024927\n",
+      "11         KNeighborsRegressor  37163.847713  4642.726050\n",
+      "8    GradientBoostingRegressor  37578.946069  6419.041194\n",
+      "9            AdaBoostRegressor  39311.169731  5545.958969\n",
+      "0             LinearRegression  39986.131374  6026.126054\n",
+      "2                        Lasso  39986.162837  6026.062580\n",
+      "4                BayesianRidge  39989.171956  6016.592728\n",
+      "1                        Ridge  40060.114211  5978.120169\n",
+      "6        RandomForestRegressor  40896.099276  5469.770288\n",
+      "15           TheilSenRegressor  41000.737346  5953.135825\n",
+      "12              HuberRegressor  41051.341379  5816.815056\n",
+      "18                XGBRegressor  41446.536219  6421.874720\n",
+      "16             RANSACRegressor  43196.646621  5826.163734\n",
+      "14                SGDRegressor  43498.246544  5589.204619\n",
+      "7          ExtraTreesRegressor  43569.714398  6636.804449\n",
+      "3                   ElasticNet  44269.076010  5046.126719\n",
+      "5        DecisionTreeRegressor  47655.624857  6535.379734\n",
+      "13  PassiveAggressiveRegressor  47793.744441  6860.280103\n",
+      "10                         SVR  77246.498253  8657.997993\n"
      ]
     }
    ],
@@ -734,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +784,7 @@
     "pipline = Pipeline(\n",
     "    steps=[\n",
     "        ('preprocessor', preprocessor),\n",
-    "        ('estimator', ensemble.RandomForestRegressor())\n",
+    "        ('estimator', LGBMRegressor())\n",
     "    ]\n",
     ")\n",
     "\n",
@@ -762,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
